0.2.2: Keep data file locally until it has been successfully posted

0.2.1: Resync RTC every time when connecting to WLAN

0.2.0: Gather data every 10 minutes, but send every hour
    
    1. Store measurements data in a text file on flash
    2. Once 5 measurements are stored, after taking sixth one
       send all the data to influx and remove the file
    3. WiFi is required before first ever measurement to set up RTC
       and every hour to send data to influx
    4. Some helper data is stored in NVRAM - adjust boot.py to reset
       NVRAM and delete cached measurements on hard resets

0.1.7:
* clean up project file, move PMS code to PMS5003 class

0.1.6:
* install 700mAh battery and step-up circuit inside pycase

0.1.5:
* fix battery voltage calculation

0.1.4:
* read 5 AQI samples instead of 10 (no. 2, 4, 6, 8 and 10)

0.1.3:
* disable printing with timestamp

0.1.2:
* connect to WLAN and setup RTC in a thread after temperature/humidity measurement

0.1.1:
* measure temperature, humidity and voltage in a separate thread

0.1.0:
* AQI
* temperature
* relative humidity
* battery voltage
* measurement duration