@@ -9,6 +9,8 @@ bluetooth.deinit()
 wlan = WLAN(mode=WLAN.STA)
 wlan.deinit()
 
+watchdog_timer = None
+
 if machine.reset_cause() not in [machine.DEEPSLEEP_RESET, machine.SOFT_RESET, machine.WDT_RESET]:
     pycom.nvs_erase_all()
     influxdb.cleanup()
