@@ -1,5 +1,9 @@
 0.2.2: Keep data file locally until it has been successfully posted
 
+	* also add LED flashing for storing data, sending data and failing to send data
+	* disable expansion board LED during deep sleep
+	* move Watchdog to boot.py
+
 0.2.1: Resync RTC every time when connecting to WLAN
 
 0.2.0: Gather data every 10 minutes, but send every hour
